<resources>
    <string name="app_name">FormApp</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="do_you_want_to_receive_updates">Do you want to receive updates?</string>
    <string name="no">No</string>
    <string name="submit_your_details">Submit Your Details</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="yes">Yes</string>
</resources>